--- a/community/soygec/index.html
+++ b/community/soygec/index.html
@@ -29,10 +29,10 @@ sitemap: community/soygec
   <li><a href='mailto:Jamie.ORourke@usda.gov'>Jamie O'Rourke</a>, Chair</li>
   <li><a href='mailto:zli@uga.edu'>Zhenglu Li</a>, Vice-Chair</li>
   <li><a href='mailto:jjedlicka@farmersbusinessnetwork.com'>Joseph Jedlicka</a>, Secretary</li>
-  <li><a href='mailto:xli@mail.hzau.edu.cn'>Xia Li</li>
-  <li><a href='mailto:maj@purdue.edu'>Jianxin Ma</li>
-  <li><a href='mailto:staceym@missouri.edu'>Bing Stacey</li>
-  <li><a href='mailto:qijian.song@usda.gov'>Qiajian Song</li>
+  <li><a href='mailto:xli@mail.hzau.edu.cn'>Xia Li</a></li>
+  <li><a href='mailto:maj@purdue.edu'>Jianxin Ma</a></li>
+  <li><a href='mailto:staceym@missouri.edu'>Bing Stacey</a></li>
+  <li><a href='mailto:qijian.song@usda.gov'>Qiajian Song</a></li>
   <li><a href='mailto:david.grant@ars.usda.gov'>David Grant</a></li>
   <li><a href='mailto:wparrott@uga.edu'>Wayne Parrott</a></li>
   <li><a href='mailto:tclemente1@unl.edu'>Tom Clemente</a>, Ex-officio</li>
