--- a/resources/index.html
+++ b/resources/index.html
@@ -177,7 +177,7 @@ tools_menu: true
                         {% endfor %}
                       {% endif %}
                     {% endfor %}
-                    
+                    <dl>
                     <dd>
                       Citation (DOI) for this accession group: 
                       {% assign doiCheck = doi | slice: 0, 2 %}
@@ -189,6 +189,7 @@ tools_menu: true
                         {% endif %}
                       </i>
                     </dd>
+                  </dl>
                   {% endif %}
                 {% endfor %}
               {% endif %}
@@ -239,6 +240,7 @@ tools_menu: true
                   Print DOI only when accession_group is of type reference, not for type citation (handled previously) 
                 {% endcomment %} 
                 {% if accession_group_type == "reference" %}
+                 <dl>
                   <dd>{{ synopsis }}
                     {% assign doiCheck = doi | slice: 0, 2 %}
                     <i>
@@ -249,14 +251,17 @@ tools_menu: true
                       {% endif %}
                     </i>
                   </dd>
+                 </dl>
                 {% else %}
-                  <dd>{{ synopsis }}</dd>
+                  <dl><dd>{{ synopsis }}</dd></dl>
                 {% endif %}
                 </span>
                 <div class="uk-margin-left">
-                  <dd>
-                    <a target="_blank" href="{{ jbrowse_base_url }}/?assembly={{ assembly }}&tracks={{ annotation }}&loc={{ readme.scientific_name_abbrev }}.{{ assembly }}.{{ chromosome_prefix }}01:1-1000000">Genome Browser</a>
-                  </dd>
+               <dl>
+                <dd>
+                  <a target="_blank" href="{{ jbrowse_base_url }}/?assembly={{ assembly }}&tracks={{ annotation }}&loc={{ readme.scientific_name_abbrev }}.{{ assembly }}.{{ chromosome_prefix }}01:1-1000000">Genome Browser</a>
+                </dd>
+               </dl>
                 </div>
               {% endif %}
             {% endfor %}
