--- a/tools/browsers/index.html
+++ b/tools/browsers/index.html
@@ -144,7 +144,7 @@ gbrowse_instances:
                         {% endfor %}
                       {% endif %}
                     {% endfor %}
-                    
+                    <dl>
                     <dd>
                       Citation (DOI) for this accession group: 
                       {% assign doiCheck = doi | slice: 0, 2 %}
@@ -156,6 +156,7 @@ gbrowse_instances:
                         {% endif %}
                       </i>
                     </dd>
+                  </dl>
                   {% endif %}
                 {% endfor %}
               {% endif %}
@@ -200,13 +201,16 @@ gbrowse_instances:
                     {% endfor %}
                   {% endif %}
                 {% endfor %}
+              <dl>
                 <dt>
                   <a target="_blank" href="{{ jbrowse_base_url }}/?assembly={{ assembly }}&tracks={{ annotation }}&loc={{ readme.scientific_name_abbrev }}.{{ assembly }}.{{ chromosome_prefix }}01:1-1000000&tracklist=true">{{ assembly }}</a>
                 </dt>
+              </dl>
                 {% comment %} 
                   Print DOI only when accession_group is of type reference, not for type citation (handled previously) 
                 {% endcomment %} 
                 {% if accession_group_type == "reference" %}
+                 <dl>
                   <dd>{{ synopsis }}
                     {% assign doiCheck = doi | slice: 0, 2 %}
                     <i>
@@ -217,8 +221,9 @@ gbrowse_instances:
                       {% endif %}
                     </i>
                   </dd>
+                 </dl>
                 {% else %}
-                  <dd>{{ synopsis }}</dd>
+                  <dl><dd>{{ synopsis }}</dd></dl>
                 {% endif %}
               {% endif %}
             {% endfor %}
