--- a/about/index.html
+++ b/about/index.html
@@ -22,14 +22,7 @@ tools_menu: false
 
 <a name="contact" id="contact">
 <iframe
-
   src="https://forms.office.com/Pages/ResponsePage.aspx?id=5zZb7e4BvE6GfuA8-g1Glykqlk2qz6REpva4KviuwwxUNjZVSkM2TUI2NjdVSVZVVDRYUEZHSEZDRSQlQCN0PWcu&embed=true"
-  frameborder="0"
-  marginwidth="0"
-  marginheight="0"
-  allowfullscreen
-  webkitallowfullscreen
-  mozallowfullscreen
-  msallowfullscreen
   class="uk-height-1-1 uk-width-1-1"
-  ></iframe></a>
+  ></iframe>
+</a>
