--- a/about/soybase_team/index.html
+++ b/about/soybase_team/index.html
@@ -4,42 +4,45 @@ tools_menu: false
 ---
 
 <div class="team">
+<h1 class="top_bar uk-margin-left">About the SoyBase Team</h1>
 
-<h1 class="top_bar">About the SoyBase Team</h1>
+<div class="uk-grid-small uk-margin-remove-left@s uk-margin-auto" uk-grid>
 {% if site.data.team%}
 {% assign current_team = site.data.team | where: "status", "current" %}
 {% for member in current_team  %}
-    <div class="uk-card uk-card-default uk-width-1-2@m uk-margin ">
-    
-      <div class="uk-card-header uk-text-bold uk-card-primary">
+<div class="uk-width-1-1@s uk-width-1-2@m uk-width-1-3@l uk-padding-small uk-margin-remove">
+  <div class="uk-card uk-card-default">
+      
+      <div class="uk-card-header uk-text-bold uk-card-primary uk-padding-small">
         {{ member.name }}
       </div>
 
-      <div class="uk-grid-small uk-flex-middle uk-padding" >
+      <div class="uk-flex-middle uk-padding-small">
         <div class="uk-width-auto">
           <div class="uk-flex uk-flex-between">
             <p class="uk-text-bold uk-margin-small-bottom">Role</p>
             <p class="uk-margin-remove">{{ member.role }}</p>
           </div>
-          <div class="uk-flex uk-flex-between">
-            <p class="uk-text-bold uk-margin-small-bottom">Specialization</p>
-            <p class="uk-margin-remove">{{ member.specialization }}</p>
-          </div>
+            <div class="uk-flex uk-flex-between">
+              <p class="uk-text-bold uk-margin-small-bottom">Specialization</p>
+              <p class="uk-margin-remove">{{ member.specialization }}</p>
+            </div>
 
-          <div>
+            <div>
             <p colspan="2">
-              <a href="{{ member.website }}">Learn More About {{ member.name }}</a>
+              <a href="{{ member.website }}" target="_blank"><span uk-icon="world"></span> Learn More About {{ member.name }}</a>
             </p>
-          </div>
+            </div>
+        </div>
       </div>
-   </div>
   </div>
+</div>
     {% endfor %}
  {%endif%}
+</div>
 
-
-<h1>Students and Postdocs</h1>
-
+<div class="uk-padding-small uk-padding-remove-vertical">
+  <h1>Students and Postdocs</h1>
 <table class="uk-table uk-table-striped uk-table-small">
   <tbody>
     {% assign student_team = site.data.team | where: "status", "student" %}
@@ -51,17 +54,21 @@ tools_menu: false
     {% endfor %}
   </tbody>
 </table>
+</div>
 
+<div class="uk-padding-small uk-padding-remove-vertical">
+  <h1>Alumni</h1>
+  <table class="uk-table uk-table-striped uk-table-small">
+    <tbody>
+      {% assign past_team = site.data.team | where: "status", "Alumni" %}
+      {% for member in past_team %}
+        <tr>
+          <td>{{ member.name }}</td>
+          <td>{{ member.role }}</td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
 
-<h1>Alumni</h1>
-<table class="uk-table uk-table-striped uk-table-small">
-  <tbody>
-    {% assign past_team = site.data.team | where: "status", "Alumni" %}
-    {% for member in past_team %}
-      <tr>
-        <td>{{ member.name }}</td>
-        <td>{{ member.role }}</td>
-      </tr>
-    {% endfor %}
-  </tbody>
-</table>
+</div>
