--- a/community/sbw/SBW/SBW_2013.html
+++ b/community/sbw/SBW/SBW_2013.html
@@ -7,17 +7,26 @@ sitemap: community/sbw
 
 <h2>2013 SOYBEAN BREEDERS & PHYSIOLOGISTS WORKSHOP</h2>
 <hr >
-<h3>Monday, February 11</h3>
+<h3 class="uk-margin-remove-bottom">Monday, February 11</h3>
 
-<table>
-<tr><td>1:30</td><td>&nbsp; &nbsp;</td><td>1:40</td><td>&nbsp; &nbsp;</td><td>Katy Martin Rainey, Purdue Univ.</td><td>&nbsp; &nbsp;</td><td>Welcome and announcements</td></tr>
-<tr><td>1:40</td><td>&nbsp; &nbsp;</td><td>2:10</td><td>&nbsp; &nbsp;</td><td>Rich Joost, United Soybean Board</td><td>&nbsp; &nbsp;</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2013/presentations/13SBW_mon_Joost.pdf">Update on USB Restructuring</a></td></tr>
-<tr><td>2:10</td><td>&nbsp; &nbsp;</td><td>2:50</td><td>&nbsp; &nbsp;</td><td>Michelle Graham, USDA-ARS, Ames</td><td>&nbsp; &nbsp;</td><td>Analysis of Rpp-4-like genes in legumes</td></tr>
-<tr><td>3:10</td><td>&nbsp; &nbsp;</td><td>3:25</td><td>&nbsp; &nbsp;</td><td>Wayne Parrott (Univ. Georgia)</td><td>&nbsp; &nbsp;</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2013/presentations/13SBW_mon_Parrot.pdf">Outline for Genetic Stocks Repository</a></td></tr>
-<tr><td>3:25</td><td>&nbsp; &nbsp;</td><td>4:05</td><td>&nbsp; &nbsp;</td><td>Andrew Bent, Univ. Wisconsin</td><td>&nbsp; &nbsp;</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2013/presentations/13SBW_mon_Bent.pdf">Copy Number Variation of Multiple Genes at Rhg1 Mediates<br> Nematode Resistance in Soybean</a></td></tr>
-<tr><td>4:05</td><td>&nbsp; &nbsp;</td><td>4:45</td><td>&nbsp; &nbsp;</td><td>Barbara Campbell & James Weatherly</td><td>&nbsp; &nbsp;</td><td>Bowman vs. Monsanto and new challenges for plant IP</tr>
-<tr><td> </td><td> </td><td> </td><td> </td><td>Patent Attorneys, Cochran Freund & Young LLC Denver, CO</td></td></tr>
-<tr><td>4:45</td><td>&nbsp; &nbsp;</td><td>5:15</td><td>&nbsp; &nbsp;</td><td>Group Discussion from the Floor:</td></td><td>&nbsp; &nbsp;</td><td>Expiration of the SCN MAS patents: When and Where? </td></tr>
+<table class="uk-table uk-table-small uk-table-hover uk-table-responsive uk-table-divider">
+<thead>
+    <tr>
+        <th class="uk-table-shrink"></th>
+        <th class="uk-table-shrink"></th>
+        <th class="uk-table-expand"></th>
+        <th class="uk-table-expand"></th>
+    </tr>
+</thead>
+<tbody>
+<tr><td class="uk-padding-small uk-padding-remove-bottom"><span class="uk-margin-right">1:30</span><span>1:40</span></td><td class="uk-width-large uk-padding-small uk-padding-remove-bottom">Katy Martin Rainey, Purdue Univ.</td><td class="uk-width-large uk-padding-small uk-padding-remove-bottom">Welcome and announcements</td></tr>
+<tr><td class="uk-padding-small uk-padding-remove-bottom"><span class="uk-margin-right">1:40</span><span>2:10</span></td><td class="uk-width-large uk-padding-small uk-padding-remove-bottom">Rich Joost, United Soybean Board</td><td class="uk-width-large uk-padding-small uk-padding-remove-bottom"><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2013/presentations/13SBW_mon_Joost.pdf">Update on USB Restructuring</a></td></tr>
+<tr><td class="uk-padding-small uk-padding-remove-bottom"><span class="uk-margin-right">2:10</span><span>2:50</span></td><td class="uk-width-large uk-padding-small uk-padding-remove-bottom">Michelle Graham, USDA-ARS, Ames</td><td class="uk-width-large uk-padding-small uk-padding-remove-bottom">Analysis of Rpp-4-like genes in legumes</td></tr>
+<tr><td class="uk-padding-small uk-padding-remove-bottom"><span class="uk-margin-right">3:10</span><span>3:25</span></td><td class="uk-width-large uk-padding-small uk-padding-remove-bottom">Wayne Parrott (Univ. Georgia)</td><td  class="uk-width-large uk-padding-small uk-padding-remove-bottom"><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2013/presentations/13SBW_mon_Parrot.pdf">Outline for Genetic Stocks Repository</a></td></tr>
+<tr><td class="uk-padding-small uk-padding-remove-bottom"><span class="uk-margin-right">3:25</span><span>4:05</span></td><td class="uk-width-large uk-padding-small uk-padding-remove-bottom">Andrew Bent, Univ. Wisconsin</td><td  class="uk-width-large uk-padding-small uk-padding-remove-bottom"><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2013/presentations/13SBW_mon_Bent.pdf">Copy Number Variation of Multiple Genes at Rhg1 Mediates<br> Nematode Resistance in Soybean</a></td></tr>
+<tr><td class="uk-padding-small uk-padding-remove-bottom"><span class="uk-margin-right">4:05</span><span>4:45</span></td><td class="uk-width-large uk-padding-small uk-padding-remove-bottom">Barbara Campbell & James Weatherly<div>Patent Attorneys, Cochran Freund & Young LLC Denver, CO</div></td><td class="uk-width-large uk-padding-small uk-padding-remove-bottom">Bowman vs. Monsanto and new challenges for plant IP</tr>
+<tr><td class="uk-padding-small uk-padding-remove-bottom"><span class="uk-margin-right">4:45</span><span>5:15</span></td><td class="uk-width-large uk-padding-small uk-padding-remove-bottom">Group Discussion from the Floor:</td></td><td class="uk-width-large uk-padding-small uk-padding-remove-bottom">Expiration of the SCN MAS patents: When and Where? </td></tr>
+</tbody>
 </table> 
 
 <h3>Tuesday, February 12</h3>
