update SBW_2016.html to use uikit

--- a/community/sbw/SBW/SBW_2010.html
+++ b/community/sbw/SBW/SBW_2010.html
@@ -79,7 +79,7 @@ sitemap: community/sbw
 				David Walker, USDA-ARS, IL - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Walker_2.pdf">Soybean Genetics Committee Report</a><br>
 				David Walker, USDA-ARS, IL - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Walker.pdf">Progress in Developing Soybean Resistant to Soybean Rust</a><br>
 				Jim Specht, Univ. of Nebraska, Perry Cregan, USDA-ARS, MD - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Specht.pdf">Selective Genotyping and Association Mapping for Protein/Oil QTLs</a><br>
-				David Grant, USDA-ARS, IA - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Grant.pdf">SoyBase & the Soybean Breeders Toolbox</a><br>
+				David Grant, USDA-ARS, IA - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Grant.pdf">SoyBase &amp; the Soybean Breeders Toolbox</a><br>
 			</div>
 
 
