--- a/community/sbw/SBW/SBW_2012.html
+++ b/community/sbw/SBW/SBW_2012.html
@@ -23,7 +23,7 @@ sitemap: community/sbw
 				Peter Morrell, Univ. Minnesota - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Morrell.pdf">Nextgen Pops, Genetic Load, and Other Advances and Applications in Crop Genomics</a><br>
 				Scott Sebastian, Pioneer Hi-Bred - Context Specific MAS<br>
 				Matt O'Neal, IA State Univ. - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/ONeal.pdf">Insect Pollinators in Soybeans</a><br>
-				Maria Ortega & Wayne Parrott, Univ. Georgia - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Ortega.pdf">De-bugging Soybean: A Story of Nano-spears and QTLs</a><br>
+				Maria Ortega &amp; Wayne Parrott, Univ. Georgia - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Ortega.pdf">De-bugging Soybean: A Story of Nano-spears and QTLs</a><br>
 				M.A. Saghai Maroof, Virginia Tech - Overview of $9.2 million AFRI Phytophthora Project<br>
 				Rich Joost, Production Research Pgm. Director, USB/SmithBucklin - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Joost.pdf">Future Directions for United Soybean Board Breeding Funding</a><br>
 			</div>
@@ -62,7 +62,7 @@ sitemap: community/sbw
 				Tommy Carter, USDA-ARS, Raleigh - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Carter.pdf">ARS Update (Including Status of Analytical Services)</a><br>
 				Jeff Thompson, Pioneer Hi-Bred - Soybean Germplasm Committee Report<br>
 				Istvan Rajcan, Univ. Guelph - Soybean Genetics Committee Report<br>
-				David Grant, USDA-ARS, Ames - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Grant.pdf">SoyBase Update & Tutorials</a><br>
+				David Grant, USDA-ARS, Ames - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Grant.pdf">SoyBase Update &amp; Tutorials</a><br>
 				Group Discussion from the Floor to David Grant - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Grant2.pdf">Resequencing Data</a><br>
 				<p class="uk-margin-small-left uk-margin-remove-vertical">How will soybean breeders use resequencing data?</p>
 				<p class="uk-margin-small-left uk-margin-remove-vertical">What tools are needed to enable this?</p>
