SoyNAM index.html enclose in <dl> update to uikit table - remove comment and random table at bottom of page

--- a/projects/SoyNAM/index.html
+++ b/projects/SoyNAM/index.html
@@ -29,13 +29,13 @@ redirect_from: /SoyNAM/
   <strong>See links below for information about each line: images, phenotypes, and associated data.</strong>
 </p>
 
-<table border="1" cellspacing="1" cellpadding="1" >
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-overflow-auto">
   <thead>
     <tr>
-      <th style="text-align: center"><b>High yielding</b></th>
-      <th style="text-align: center"><b>Diverse ancestry</b></th>
-      <th style="text-align: center"><b>High yield in drought</b></th>
-      <th style="text-align: center"><b>Hub parent</b></th>
+      <th>High yielding</th>
+      <th>Diverse ancestry</th>
+      <th>High yield in drought</th>
+      <th>Hub parent</th>
     </tr>
   </thead>
   <tbody>
@@ -74,7 +74,3 @@ redirect_from: /SoyNAM/
 showed that the cross was not as described. No phenotypic data for SoyNAM 46 are available.
 </p>
 
-{% comment %}
-
-<table class="uk-table uk-width-1-2 uk-text-center uk-text-nowrap uk-table-condensed uk-padding-small">
-{% endcomment %}
