--- a/tools/analysis/go.html
+++ b/tools/analysis/go.html
@@ -24,7 +24,7 @@ the gene-list report at <a href="https://mines.legumeinfo.org/glycinemine/begin.
 <p>Either enter a list of gene model names into this box, one name per line:</p>
 
 <form method="post" class="uk-text-center uk-text-left@m">
-  <fieldset style="display: inline-block;">
+  <fieldset class="uk-display-inline-block">
     <legend>
       <label for="glyma.list">Insert Gene List:</label><br />
       (One per line)
@@ -40,7 +40,7 @@ the gene-list report at <a href="https://mines.legumeinfo.org/glycinemine/begin.
 Or upload a text file containing one gene model name per line:<br /><br />
 
 <form class="uk-text-center uk-text-left@m" method="post" enctype="multipart/form-data">
-  <fieldset style="display: inline-block;">
+  <fieldset class="uk-display-inline-block">
   <legend><label for="glyma.list.upload">Upload a text file</label></legend>
   <ol>
     <li><input type="file" id="glyma.list.upload" name="glyma.list" /></li>
@@ -70,7 +70,7 @@ Or upload a text file containing one gene model name per line:<br /><br />
   }
 
 
-  disableButton('go-annotation-btn', 'glyma.list.upload');
+  disableButton('go-annotation-btn', 'glyma.list');
   disableButton('go-term-btn', 'glyma.list')
   disableUploadButton('go-annotation-upload-btn');
   disableUploadButton('go-term-upload-btn')
