--- a/tools/browsers/index.html
+++ b/tools/browsers/index.html
@@ -2,36 +2,6 @@
 title: Genome browsers
 sitemap: sequence map
 tools_menu: true
-
-gbrowse_instances:
-- category: "Glycine max"
-  name: "Wm82.a2"
-  url_suffix: "gmax2.0"
-- category: "Glycine max"
-  name: "Wm82.a6"
-  url_suffix: "glyma.Wm82.gnm6"
-- category: "Glycine max"
-  name: "Wm82.a4"
-  url_suffix: "glyma.Wm82.gnm4"
-- category: "Glycine max"
-  name: "Wm82.a1"
-  url_suffix: "gmax1.01"
-- category: "Glycine max"
-  name: "Fiskeby III"
-  url_suffix: "glyma.FiskebyIII.gnm1"
-- category: "Glycine max"
-  name: "Lee"
-  url_suffix: "glyma.Lee.gnm1"
-- category: "Glycine max"
-  name: "Zh13"
-  url_suffix: "glyma.Zh13.gnm1"
-- category: "Glycine soja"
-  name: "PI 483463"
-  url_suffix: "glyso.PI483463.gnm1"
-- category: "Glycine soja"
-  name: "W05"
-  url_suffix: "glyso.W05.gnm1"
-
 ---
 
 {% capture jbrowse_base_url %}/assets/js/jbrowse{% endcapture %}
@@ -47,7 +17,7 @@ gbrowse_instances:
 <br>
 (Click <b>**</b> for unframed links: useful for bookmarking and sharing track configurations and views)
 <br>
-{% assign groups = page.gbrowse_instances | group_by: "category" | sort: "name" %}
+{% assign groups = site.data.gbrowse_instances.gbrowse_instances | group_by: "category" | sort: "name" %}
 {% assign asterisk = "**" %}
 {% for species in groups %}
   <u><i>{{ species.name }}</i></u>
@@ -62,7 +32,7 @@ gbrowse_instances:
       </a> 
     {% endfor %}
   {%- endcapture -%}
-  <div style="margin-left:10px">
+  <div class="uk-margin-small-left">
     {{ browser_list | remove_first: ', ' }}
   </div>
 {% endfor %}
