--- a/tools/gcvit/index.html
+++ b/tools/gcvit/index.html
@@ -24,31 +24,28 @@ p, h2, h3, details {
 }
 </style>
                            
-<h2 style='font-weight:bold;'>GCViT (Genotype Comparison Visualization Tool)</h2>
-<p style='font-weight:bold;'> <a href='https://youtu.be/B2gPVUipWo0'>Video Tutorial on GCViT</a> </p>
+<h2 class="uk-text-bold">GCViT (Genotype Comparison Visualization Tool)</h2>
+<p class="uk-text-bold"> <a href='https://youtu.be/B2gPVUipWo0'>Video Tutorial on GCViT</a> </p>
 
 <!-- ################# add details button for Datasets on GCVIT-->
-<p>
-  <strong>Learn more about the Datasets available on GCViT</strong>
+<p class="uk-text-bold">
+  Learn more about the Datasets available on GCViT
 </p>
 <details>
-<style>
-th, td {
-  padding: 7px;
-}
-</style>
 
 <!--<h3>  GCViT Datasets</h3>-->
 <p>SNPs were sampled at a density of no more than one SNP per 25kb prior to display. This has the effect of partially normalizing the SNP density (though regions of the genome with very sparse SNP density will still show sparse density). </p>
-<p><a href='https://data.soybase.org/Glycine/max/diversity/Wm82.gnm2.div.Song_Hyten_2015/glyma.Wm82.gnm2.div.Song_Hyten_2015.PIconversion.txt.gz' style='font-weight:bold;'>Click Here To Download PI to Common Name Conversion Table</a></p>
-<p style="color:blue; font-size:100%;"> If you would like to submit your data to be run on this tool please <span><a href='/about/' style="color:red;">Contact Us </a></span></p>
+<p><a href='https://data.soybase.org/Glycine/max/diversity/Wm82.gnm2.div.Song_Hyten_2015/glyma.Wm82.gnm2.div.Song_Hyten_2015.PIconversion.txt.gz' class="uk-text-bold">Click Here To Download PI to Common Name Conversion Table</a></p>
+<p style="color: blue"> If you would like to submit your data to be run on this tool please <span><a href='/about/' style="color: rgb(232, 0, 0)" class="uk-text-bold">Contact Us </a></span></p>
 
-<table style="width:100%">
+<table class="uk-table uk-table-small uk-table-hover uk-table-responsive uk-table-divider uk-table-striped">
+ <thead>
   <tr>
     <th>Dataset</th>
     <th>Citation*</th> 
     <th>Source</th>
   </tr>
+ </thead>
   <tr>
     <td>SoySNP50K</td>
     <td>Song, Q., Hyten, D. L., Jia, G., Quigley, C. V., Fickus, E. W., Nelson, R. L., Cregan, P. B. (2015). Fingerprinting soybean germplasm and its utility in genomic research. G3: Genes, Genomes, Genetics, 5(10). <a href='https://doi.org/10.1534/g3.115.019000'>doi.org/10.1534/g3.115.019000</a></td>
