add ui-kit to page

--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -3,59 +3,89 @@ layout: default
 title: 2025 Soybean Breeders Workshop - Pathology and Breeding Innovations
 sitemap: community/sbw
 ---
-<style>
-tr, td {
-  padding: 10px;
-}
-</style>
 
 
-<img src="/assets/img/SBW_logo.png" style="float: right; height: 175px; width: 300px; margin-left: 1px; margin-right: 1px;"/>
-<h2>2025 Soybean Breeder's Workshop - Pathology and Breeding Innovations<br>
-February 17 - 19, 2025</h2>
-<h5>Hilton St. Louis Frontenac<br>
-<a href="https://www.google.com/maps/place/Hilton+St.+Louis+Frontenac/@38.6341961,-90.4097409,17z/data=!4m9!3m8!1s0x87d8ccdc51b5c88d:0x7035e9e66f84beb7!5m2!4m1!1i2!8m2!3d38.6341961!4d-90.407166!16s%2Fg%2F1vnnjylv?entry=ttu" target="_blank">1335 S Lindbergh Blvd, St. Louis, MO 63131</a>
-<hr>
-<h5> Click <a href="EventBrite" target="_blank"><b>here</b></a> to make hotel reservation. Group rate available until DATE
-</h5>
+<div class="uk-panel">
+  <img class="uk-align-right uk-margin-remove-adjacent" src="/assets/img/SBW_logo.png" width="300" height="175" alt="Soybean Breeder Workshop Logo">
+  <h5 class="uk-heading-small">2025 Soybean Breeder's Workshop - Pathology and Breeding Innovations</h5>
+  <p>February 17 - 19, 2025</p>
+  <p>Hilton St. Louis</p>
+  <a href="https://www.google.com/maps/place/Hilton+St.+Louis+Frontenac/@38.6341961,-90.4097409,17z/data=!4m9!3m8!1s0x87d8ccdc51b5c88d:0x7035e9e66f84beb7!5m2!4m1!1i2!8m2!3d38.6341961!4d-90.407166!16s%2Fg%2F1vnnjylv?entry=ttu" target="_blank">1335 S Lindbergh Blvd, St. Louis, MO 63131</a>
+</div>
+<h1 class="uk-heading-divider"></h1>
 
 
-<table style="float: right;">
-  <tr>
-    <th colspan="2"><b>Registration Fees until 1/09/2025</b></th>
-  </tr>
-  <tr>
-    <th><u>Registration</u></th>
-    <th><u>Fees</u></th>  
-  </tr>
-  <tr>
-    <td>Student / PostDoc</td>
-    <td>$125</td>
-  </tr>
-  <tr>
-    <td>Professional</td>
-    <td>$200</td>
-  </tr>
-  <tr>
-    <td>Data Visualation Workshop</td>
-    <td>$250</td>
-  </tr>
-  <tr>
-    <th colspan="2"><b>**Late Registration Fees after 1/10/2025**</b></th>
-  </tr>
-  <tr>
-    <th><u>Registration</u></th>
-    <th><u>Fees</u></th>  
-  </tr>
-  <tr>
-    <td>Student / PostDoc</td>
-    <td>$175</td>
-  </tr>
-  <tr>
-    <td>Professional</td>
-    <td>$250</td>
-  </tr>
+
+
+<div class="uk-child-width-1-2@s" uk-grid>
+    <div>
+        <div class="uk-card uk-card-default uk-card-large uk-card-body">
+            <h4 class="uk-card-title">Registration Fees until 1/09/2025</h4>
+            <table class="uk-table">
+                <tbody>
+                    <tr>
+                        <td>Student / PostDoc</td>
+                        <td>$125</td>
+                    </tr>
+                    <tr>
+                        <td>Professional</td>
+                        <td>$200</td>
+                    </tr>
+                    <tr>
+                        <td>Data Visualation Workshop</td>
+                        <td>$100</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div>
+        <div class="uk-card uk-card-default uk-card-large uk-card-body">
+            <h4 class="uk-card-title">Late Registration Fees after 1/10/2025</h4>
+            <table class="uk-table">
+                <tbody>
+                    <tr>
+                        <td>Student / PostDoc</td>
+                        <td>$175</td>
+                    </tr>
+                    <tr>
+                        <td>Professional</td>
+                        <td>$250</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+<table class="uk-table">
+    <caption><b>****</b></caption>
+    <thead>
+        <tr>
+            <th><u>Registration</u></th>
+            <th><u>Fees</u></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Student / PostDoc</td>
+            <td>$175</td>
+        </tr>
+        <tr>
+            <td>Professional</td>
+            <td>$250</td>
+        </tr>
+    </tbody>
 </table>
+
+
+
+
 
 <h4>Click <a href="EventBrite" target="_blank">here</a> to register and/or submit poster abstract</h4>
 
