ontology/ontologyConversion.html - update to uikit table to uk-table-expand and uk-table-middle

--- a/tools/ontology/ontologyConversion.html
+++ b/tools/ontology/ontologyConversion.html
@@ -22,28 +22,28 @@ tools_menu: true
 
 Conversions Between SOY growth, PO Whole Plant Growth Stages and BBCH Scale
 <div class="uk-overflow-auto">
-<table class="uk-table uk-table-small uk-table-hover uk-table-striped uk-table-divider">
+<table class="uk-table uk-table-small uk-table-hover uk-table-striped uk-table-divider uk-table-middle">
 	<thead>
 		<tr>
-			<th class="uk-table-shrink">
+			<th class="uk-table-expand">
 			  Growth Stage
 			</th>
-			<th class="uk-table-shrink">
+			<th class="uk-table-expand">
 			  Growth Stage Title
 			</th>
-			<th class="uk-table-shrink">
+			<th class="uk-table-expand">
 			  SOY Accession Number
 			</th>
-			<th class="uk-table-shrink">
+			<th class="uk-table-expand">
 			  SOY Title
 			</th>
-			<th class="uk-table-shrink">
+			<th class="uk-table-expand">
 			  BBCH Scale ID Number
 			</th>
-			<th class="uk-table-shrink">
+			<th class="uk-table-expand">
 			  PO Accession Number
 			</th>
-			<th class="uk-table-shrink">
+			<th class="uk-table-expand">
 			  PO Accession Title
 			</th>
 		  </tr>
