--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -8,11 +8,11 @@ sitemap: community/sbw
 <div class="uk-panel">
   <img class="uk-align-right uk-margin-remove-adjacent" src="/assets/img/SBW_logo.png" width="300" height="175" alt="Soybean Breeder Workshop Logo">
   <h5 class="uk-heading-small">2025 Soybean Breeder's Workshop - Pathology and Breeding Innovations</h5>
-  <p>February 17 - 19, 2025</p>
-  <p>Hilton St. Louis</p>
+  <p class="uk-margin-remove-vertical">February 17 - 19, 2025</p>
+  <p class="uk-margin-remove-vertical">Hilton St. Louis</p>
   <a href="https://www.google.com/maps/place/Hilton+St.+Louis+Frontenac/@38.6341961,-90.4097409,17z/data=!4m9!3m8!1s0x87d8ccdc51b5c88d:0x7035e9e66f84beb7!5m2!4m1!1i2!8m2!3d38.6341961!4d-90.407166!16s%2Fg%2F1vnnjylv?entry=ttu" target="_blank">1335 S Lindbergh Blvd, St. Louis, MO 63131</a>
 </div>
-<h1 class="uk-heading-divider"></h1>
+<h1 class="uk-heading-divider uk-margin-remove-vertical"></h1>
 
 
 
@@ -61,27 +61,59 @@ sitemap: community/sbw
 
 
 
+<p class="uk-text-lead">New for the 2025 Soybean Breeder Workshop</p>
+
+    <div class="uk-child-width-1-2@m" uk-grid>
+       <div>
+          <div class="uk-card uk-card-default">
+                <div class="uk-card-media-top">
+                    <img src="images/light.jpg" width="1800" height="1200" alt="">
+                </div>
+            <div class="uk-card-body">
+                <h3 class="uk-card-title">Keynote Speaker</h3>
+                <p>Dr. Jan Leach</p>
+                <p>Plant Pathologist</p>
+                <p>Colorado State University</p>
+            </div>
+        </div>
+    </div>
 
 
-<table class="uk-table">
-    <caption><b>****</b></caption>
-    <thead>
-        <tr>
-            <th><u>Registration</u></th>
-            <th><u>Fees</u></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Student / PostDoc</td>
-            <td>$175</td>
-        </tr>
-        <tr>
-            <td>Professional</td>
-            <td>$250</td>
-        </tr>
-    </tbody>
-</table>
+    <div class="uk-child-width-1-2@m" uk-grid>
+    <div>
+        <div class="uk-card uk-card-default">
+            <div class="uk-card-media-top">
+                <img src="images/light.jpg" width="1800" height="1200" alt="">
+            </div>
+            <div class="uk-card-body">
+                <h3 class="uk-card-title">Keynote Speaker</h3>
+                <p>Dr. Carl Bradley</p>
+                <p>Plant Pathologist</p>
+                <p>Univeristy of Kentucky</p>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="uk-child-width-1-2@m" uk-grid>
+    <div>
+        <div class="uk-card uk-card-default">
+            <div class="uk-card-media-top">
+                <img src="images/light.jpg" width="1800" height="1200" alt="">
+            </div>
+            <div class="uk-card-body">
+                <h3 class="uk-card-title">Workshop Instructor</h3>
+                <p>Dr. Cory Hirsch</p>
+                <p>Plant Pathologist</p>
+                <p>Univeristy of Minnesota</p>
+            </div>
+        </div>
+    </div>
+
+
+Workshop Title: 
+From Data to Insight: Effective Visualization Techniques in Science
+
 
 
 
