Add JDC head shot

--- a/community/sbw/officers.html
+++ b/community/sbw/officers.html
@@ -65,7 +65,22 @@ sitemap: community/sbw
                     <img src="/assets/img/sbw/officers/SBW_Officer_Rex_Nelson.png" width="200" height="200" alt="Rex Nelson">
                 </div>
             <div class="uk-card-body">
-                <h3 class="uk-card-title">Aaron Lorenz</h3>
+                <h3 class="uk-card-title">Rex Nelson</h3>
+                <p>SoyBase Liaison | USDA</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div>
+    <div class="uk-child-width-1-2@m" uk-grid>
+       <div>
+          <div class="uk-card uk-card-default">
+                <div class="uk-card-media-top">
+                    <img src="/assets/img/sbw/officers/SBW_Officer_JD_Campbell.JPG" width="200" height="200" alt="Jacqueline Campbell">
+                </div>
+            <div class="uk-card-body">
+                <h3 class="uk-card-title">Jacqueline Campbell</h3>
                 <p>SoyBase Liaison | USDA</p>
             </div>
         </div>
