--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -151,7 +151,10 @@ Your room reservations will help offset the costs of the meeting rooms throughou
 
 <h4>Meeting Room Request</h4>
 <details> 
-<p>If you plan to organize a small group meeting and need a meeting room during the workshop, please send your request to <a href="mailto:nchoquette@bensonhill.com">Nicole Choquette</a> <b>no later than January 10. 2025</b> by indicating number of attendees, meeting date and time.</p>
+<p>If you plan to organize a small group meeting and need a meeting room during the workshop, please send your 
+    request to <a href="mailto:nchoquette@bensonhill.com">Nicole Choquette</a> <b>no later than January 10. 2025</b> 
+    by indicating number of attendees, meeting date and time.
+    You can view the hotel map <a href="/assets/img/sbw/2025/hotel_map.pdf" target="_blank">here</a>.</p>
 </details>
 
 
